# Netology_Part_3

./: .gitignore  README.md
3_10/3_10_02/: 3_10_02.cpp  CMakeLists.txt  Diamond.h  EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.cpp  IsoscelesTriangle.cpp  Parallelogram.cpp  Parallelogram.h  Rectangle.h  RightRectangle.cpp  RightTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
3_11/3_11_01/: 3_11_01.sln
3_11/3_11_02/: 3_11_02.sln
3_11/3_11_03/: CMakeLists.txt  DynamicLibMain.cpp  Leaver.cpp  Leaver.h
3_2/3_2_01/: 3_2_01.cpp
3_2/3_2_02/: 3_2_02.cpp
3_2/3_2_03/: 3_2_03.cpp
3_3/3_3_01/: 3_3_01.cpp
3_3/3_3_02/: 3_3_02.cpp
3_4/3_4_01/: 3_4_01.cpp  out.txt
3_4/3_4_02/: 3_4_02.cpp  out.txt
3_5/3_5_01/: 3_5_01.cpp
3_5/3_5_02/: 3_5_02.cpp
3_5/3_5_03/: 3_5_03.cpp
3_6/3_6_01/: 3_6_01.cpp  mymath.cpp  mymath.h
3_6/3_6_02/: 3_6_02.cpp  Counter.cpp  Counter.h
3_6/3_6_03/: Diamond.cpp  Figure.h  IsoscelesTriangle.h  Rectangle.cpp  RightRectangle.h  RightTriangle.cpp
3_7/3_7_01/: 3_7_01.cpp
3_7/3_7_02/: 3_7_02.cpp
3_8/3_8_01/: 3_8_01.cpp
3_8/3_8_02/: 3_8_02.cpp  Diamond.cpp  Diamond.h  EquilateralTriangle.cpp  EquilateralTriangle.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  MyException.cpp  MyException.h  Parallelogram.cpp  Parallelogram.h  Rectangle.cpp  Rectangle.h  RightRectangle.cpp  RightRectangle.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
3_9/3_9_01/: 3_9_01.cpp
3_UnitTest/: CMakeLists.txt  build.bat  extended_array.h  test.cpp
RaceSimulator/: RaceSimulator.sln
(+45 files in other folders)
