cmake_minimum_required(VERSION 3.22.0)
project(3_10_02)
add_executable(3_10_02 3_10_02.cpp Diamond.cpp Diamond.h EquilateralTriangle.cpp EquilateralTriangle.h Figure.cpp Figure.h IsoscelesTriangle.cpp IsoscelesTriangle.h Parallelogram.cpp Parallelogram.h Rectangle.cpp Rectangle.h RightRectangle.cpp RightRectangle.h RightTriangle.cpp RightTriangle.h Square.cpp Square.h Triangle.cpp Triangle.h)